# recupera-o

./: .gitignore  CMakeLists.txt  _camadas_vs.glsl  _sprites_vs.glsl  main.cpp
include/: Layer.h  Shader.h  Triangulo.h  gl_utils.h
src/: Layer.cpp  Shader.cpp  Triangulo.cpp  gl_utils.cpp
